Your commit message here

--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@ html{
     scroll-behavior: smooth;
 }
 body {
-    background-image: url('https://img.freepik.com/free-photo/flat-lay-workstation-with-copy-space-laptop_23-2148430879.jpg?w=1380&t=st=1697696097~exp=1697696697~hmac=343a0b38b79a8a8cd1351b885d2b6330cacc1a5cc10305800cf5d4aa9993f3a0'); /* Replace 'your-image-url.jpg' with the actual URL or path to your image */
-    background-size: cover; /* This property ensures the image covers the entire background */
+
+  
+    background-color: black; /* Replace 'your-image-url.jpg' with the actual URL or path to your image */
+
+    
     background-repeat: no-repeat; /* Prevents the image from repeating */
     color: #fff;
 }
@@ -18,6 +21,10 @@ body {
     width: 100%;
     height: 100vh;
     background-image: url(images/logo.png);
+
+    background-image: url(images/background.jpeg);
+    background-image: url(images/logo.png);
+
     background-size: cover;
     background-position: center;
 
@@ -358,4 +365,10 @@ form btn2{
 }
 .copyright{
     color: #ff004f;
+
 }
+
+nav .fas{
+    display: none;
+}
+
